Fix issue with huge glyphs on Firefox mobile

--- a/tools/additionalGlyphs/tool.css
+++ b/tools/additionalGlyphs/tool.css
@@ -32,6 +32,7 @@ body.lichessTools.mobile svg.cg-custom-svgs g[cgHash]>text {
   font-size: 0.025em;
 }
 
-body.lichessTools.mobile svg.cg-custom-svgs>g>g * {
+body.lichessTools.mobile svg.cg-custom-svgs > g > g g {
   scale: 1.3;
+  translate: -20% -10%;
 }
